# plover_markdown_dictionary

./: README.md  example.json  plover_markdown_dictionary.py  setup.cfg  setup.py
scripts/: generate_example_from_readme.py  time.py
test/: test_convert_dictionary.py  test_entry.py  test_entry_from_text.py  test_load_dictionary.py  test_load_fails.py  test_plover_dictionary_test.py  test_save_dictionary.py
test/data/: changes.md  code_blocks.md  error_unequal_code_block.md  example.json  small.md  weird_entries.md
