[metadata]
name = plover-markdown-dictionary
version = 0.2.0
description = Markdown literate dictionary support for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = antistic
license = MIT
url = https://github.com/antistic/plover_markdown_dictionary
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
keywords = plover plover_plugin

[options]
zip_safe = True
python_requires = >=3.6
install_requires =
	importlib_metadata
	plover>=4.0.0.dev10
py_modules =
	plover_markdown_dictionary

[options.extras_require]
test =
	pytest

[options.entry_points]
plover.dictionary =
	md = plover_markdown_dictionary:MarkdownDictionary
